# Misc

./: .clangd  PracticePad.cpp  bpiecetree.cpp  concurrentIMPL.cpp  generator_example.cpp  hashcash.cpp  profile.0.0.0  project.cpp  project.info  stdinc.hpp  vid_info
SSLCerts/: cert_chain.pem
VariadicPackExamples/: Print.cpp  Sum.cpp
boostExamples/:  websocket_sync_client.cpp  PingGoogle.cpp  asyncHttpsClientwithTimeouts.cpp  makeParallel_waitforone.cpp  persistentHttpsClient.cpp  simplehttpclient.cpp
boostExamples/advanced server/: multithreaded_chat_server
ffmpeg4.4 Examples/: DecodeAndProcessLoop.cpp  Decoder_RGB.cpp  README.MD  ReMuxer.cpp  VideoDecoder.cpp  VideoTextures.hpp  decoder_rgb  metadata_extractor.cpp  server.cpp  transcoder.cpp
misc/: CMakeLists.txt  MontyHallTest.cpp  cogenerator.cpp  expected  expected.cpp  imagezip.cpp  indexedlist.cpp  oneapitests.cpp  profile.0.0.0  regex.cpp  tree_coroutine.cpp
systemcalls/: LinuxSystemCall.cpp  OS-Selection-Macro.txt  Shutdown Task.cpp  WinSystemCall.cpp  boopyshutdownprog  os_abstraction.hpp
